--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,8 @@ name = "life-network-data-pipeline"
 version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "dlt[postgres]>=1.12.3",
+    "prefect>=3.4.7",
+    "pymysql>=1.1.1",
+]
