add work pool configuration to TN Daily Import deployment

--- a/prefect.yaml
+++ b/prefect.yaml
@@ -52,3 +52,5 @@ deployments:
   parameters:
     dataset_name: traumasoft_tn
     source_name: tn_database
+  work_pool:
+    name: pipeline_workflow
