--- a/prefect.yaml
+++ b/prefect.yaml
@@ -19,14 +19,26 @@ pull:
     repository: https://github.com/amwilliams42/life_network_data_pipeline.git
     branch: master
     access_token: "{{ prefect.blocks.secret.github-pat }}"
-- prefect.deployments.steps.run_shell_script:
+- prefect_docker.deployments.steps.run_shell_script:
     script: |
-      echo "Post-clone: Creating secrets.toml from environment..."
+      echo "Post-clone: Setting up secrets..."
+      
+      # Check if source secrets file exists
+      if [ ! -f "/host-secrets/secrets.toml" ]; then
+        echo "ERROR: Secrets file not found at /host-secrets/secrets.toml"
+        exit 1
+      fi
+      
+      # Create .dlt directory
       mkdir -p .dlt
-      echo "$DLT_SECRETS_TOML" > .dlt/secrets.toml
+      
+      # Copy secrets file
+      cp /host-secrets/secrets.toml .dlt/secrets.toml
       chmod 600 .dlt/secrets.toml
-      echo "Secrets file created in $(pwd)/.dlt/"
-      ls -la .dlt/
+      
+      echo "✅ Secrets file copied successfully"
+      echo "Working directory: $(pwd)"
+      echo "Secrets file size: $(stat -c%s .dlt/secrets.toml) bytes"
 - prefect.deployments.steps.pip_install_requirements:
     directory: "{{ clone-step.directory }}"
     requirements_file: requirements.txt
