--- a/prefect.yaml
+++ b/prefect.yaml
@@ -21,14 +21,11 @@ pull:
     access_token: "{{ prefect.blocks.secret.github-pat }}"
 - prefect.deployments.steps.run_shell_script:
     id: mkdir
-    script: mkdir -p life_network_data_pipeline./dlt
+    script: mkdir -p /var/dlt
     stream_output: true
 - prefect.deployments.steps.run_shell_script:
     id: copy-secrets
-    script: cp /host-secrets/secrets.toml life_network_data_pipeline./dlt/secrets.toml
-- prefect.deployments.steps.run_shell_script:
-    id: chmod-secrets
-    script: chmod 600 life_network_data_pipeline./dlt/secrets.toml
+    script: cp /host-secrets/secrets.toml /var/dlt/secrets.toml
 - prefect.deployments.steps.pip_install_requirements:
     directory: "{{ clone-step.directory }}"
     requirements_file: requirements.txt
