--- a/prefect.yaml
+++ b/prefect.yaml
@@ -70,3 +70,9 @@ deployments:
     source_name: tn_database
   work_pool:
     name: pipeline_workflow
+- name: DBT Run
+  schedule:
+    cron: "0 2 * * *"
+  entrypoint: flows/dbt.py:run_dbt
+  work_poo:
+    name: pipeline_workflow
