--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "dbt-postgres>=1.9.0",
     "dlt[postgres]>=1.12.3",
     "pre-commit>=4.2.0",
+    "prefect-dbt>=0.7.4",
     "prefect[github]>=3.4.7",
     "pymysql>=1.1.1",
 ]
