add comprehensive requirements.txt for dependency management

--- a/prefect.yaml
+++ b/prefect.yaml
@@ -30,6 +30,10 @@ pull:
     directory: "{{ clone-step.directory }}"
     requirements_file: requirements.txt
     stream_output: False
+- prefect.deployments.steps.run_shell_script:
+    id: dbt deps
+    script: dbt deps
+    stream_output: true
 
 # the deployments section allows you to provide configuration for deploying flows
 deployments:
