--- a/prefect.yaml
+++ b/prefect.yaml
@@ -32,7 +32,7 @@ pull:
     stream_output: False
 - prefect.deployments.steps.run_shell_script:
     id: dbt deps
-    script: dbt deps --project-dir ./life_network_data_pipeline/lan_dbt/
+    script: ls -a
     stream_output: true
 
 # the deployments section allows you to provide configuration for deploying flows
