--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ coolname==2.2.0
 cryptography==45.0.4
 daff==1.4.2
 dateparser==1.2.1
+dbt==1.0.0.40.5
 dbt-adapters==1.16.0
 dbt-common==1.26.0
 dbt-core==1.10.3
@@ -81,7 +82,6 @@ parsedatetime==2.6
 pathspec==0.12.1
 pathvalidate==3.3.1
 pendulum==3.1.0
-pip==25.1.1
 platformdirs==4.3.8
 pluggy==1.6.0
 ply==3.11
