--- a/.github/workflows/deploy-prefect.yml
+++ b/.github/workflows/deploy-prefect.yml
@@ -37,7 +37,7 @@ jobs:
           pwd
           ls -la
           prefect deploy --all
-          echo '✅ Deployment completed!'
+          echo 'Deployment completed!'
         "
 
     - name: Verify Deployment
