--- a/prefect.yaml
+++ b/prefect.yaml
@@ -32,7 +32,7 @@ pull:
     stream_output: True
 - prefect.deployments.steps.run_shell_script:
     id: lsa
-    script: ls -a
+    script: ls -a {{clone-step.directory}}
     stream_output: True
 - prefect.deployments.steps.run_shell_script:
     id: dbt deps
