--- a/prefect.yaml
+++ b/prefect.yaml
@@ -36,7 +36,7 @@ pull:
     stream_output: True
 - prefect.deployments.steps.run_shell_script:
     id: dbt
-    script: cd {{clone-step.directory}}/lan_dbt/ && dbt deps
+    script: cd ..
     stream_output: True
 
 
