--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "dlt[postgres]>=1.12.3",
     "pre-commit>=4.2.0",
     "prefect-dbt>=0.7.4",
+    "prefect-shell>=0.3.1",
     "prefect[github]>=3.4.7",
     "pymysql>=1.1.1",
 ]
