--- a/lan_dbt/dbt_project.yml
+++ b/lan_dbt/dbt_project.yml
@@ -31,20 +31,6 @@ models:
     # Staging models are ephemeral by default
     staging:
       +materialized: view
-      +schema: staging
-
-      # Source-specific staging models
-      traumasoft_tn:
-        +schema: staging
-
-      # Add placeholders for other sources as they become available
-      source2:
-        +schema: staging
-
-      source3:
-        +schema: staging
-
-    # Mart/Gold layer models are tables by default
-    marts:
-      +materialized: table
-      +schema: marts
+    analytics:
+      +materialized: view
+      +schema: analytics
